fix: align classics hero cover with normal game hero content inset

--- a/src/renderer/src/pages/game-details/hero.scss
+++ b/src/renderer/src/pages/game-details/hero.scss
@@ -73,7 +73,7 @@ $hero-height: 350px;
 
   &__hero-classics-content {
     position: absolute;
-    left: 64px;
+    left: calc(globals.$spacing-unit * 2);
     right: 200px;
     top: 0;
     bottom: 80px;
